# mocktide

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: client.py  client_dummy.py  client_sbe.py  config.yaml  dummy.yaml  sbe.yaml
src/: cli.rs  connection.rs  lib.rs  main.rs  mapping.rs  message.rs  processor.rs  reporter.rs  shutdown.rs
src/server/: mod.rs  tcp.rs
tests/: test_tcp_server.rs
