[package]
name = "mocktide"
version = "0.1.0"
edition = "2021"
authors = ["Cauã Bernardino <cauabernardino@outlook.com>"]
license = "MIT"
readme = "README.md"
description = "A configurable mock server for testing network clients."
repository = "https://github.com/cauabernardino/mocktide"
keywords = ["mock", "protocols", "tcp", "udp"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mocktide"

[dependencies]
tokio = { version = "1.43", features = ["full"]}
log = "0.4"
env_logger = "0.11"
anyhow= "1.0.95"
bytes = "1.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_bytes = "0.11"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
claims = "0.8"

[profile.release]
strip = true
opt-level = "s"
lto = true

